--- a/style.css
+++ b/style.css
@@ -1,10 +1,59 @@
 /* google fonts  */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
-/* font-family: 'Roboto', sans-serif; */
-
 * {
     margin: 0;
     padding: 0;
     color: #fff;
+}
+
+/* main  */
+.main-area {
+    font-family: 'Roboto', sans-serif;
+    margin: 1.5rem auto;
+    background-image: url('bg.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    border-radius: 1rem;
+}
+
+.song-list {
+    width: 70%;
+    padding: 3px 10px;
+    margin-bottom: 1rem;
+}
+
+.song-img {
+    width: 7%;
+}
+
+.song-title {
+    width: 90%;
+    cursor: pointer;
+}
+
+/* footer  */
+footer {
+    position: -webkit-sticky;
+    position: sticky;
+    bottom: 0;
+}
+
+#myProgressBar {
+    width: 80%;
+    position: sticky;
+    height: 1.5rem;
+    padding: 1.5rem;
+}
+
+.icon {
+    margin-top: 0px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.playInfo img {
+    width: 3rem;
+    opacity: 1;
 }
