--- a/style.css
+++ b/style.css
@@ -56,5 +56,5 @@ footer {
 .playInfo img {
     width: 3rem;
     opacity: 0;
-    transition: opcity 0.5s ease-in;
+    transition: 0.6s ease-in;
 }
